# Secure_Code

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  convert_xlsx_to_csv.py  readme content.docx
csv_input/: ENTITLEMENT_MST.csv  SOD_MASTER.csv  XX_2_USER_DETAILS_RPT.csv  XX_7_PVLGS_MASTER_RPT.csv
include/: data_structures.h  entitlement_lookup.h  main.h  parser.h  privilege_lookup.h  role_lookup.h  sod_checker.h  sod_violations.h  user_lookup.h  utils.h
src/: entitlement_lookup.cpp  main.cpp  parser.cpp  privilege_lookup.cpp  role_lookup.cpp  sod_checker.cpp  sod_violations.cpp  user_lookup.cpp  utils.cpp
